CSS, JS import optimized.

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -61,7 +61,7 @@
 
 
       <li class="nav-item nav-dropdown" routerLinkActive="open">
-        <a class="nav-link nav-dropdown"
+        <a class="nav-link nav-dropdown nav-dropdown-toggle"
            routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i class="icon-speedometer"></i>
           Clinician Manager</a>
         <ul class="nav-dropdown-items">
@@ -110,10 +110,6 @@
               class="icon-puzzle"></i> Clinicians</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i
-              class="icon-puzzle"></i> All data </a>
-          </li>
 
         </ul>
       </li>
