--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -13,11 +13,9 @@
         <span class="fa fa-spinner w3-spin" style="font-size:20px"></span>
 
         loading:
-
-        <!--{{progress.percentage}}% |
+        {{progress.percentage}}% |
       loaded: {{progress.total}} bytes
 
-      -->
 
       </span>
     </span>
@@ -77,7 +75,7 @@
 
           <button *ngIf="!singleValued && observationGroups && observationGroups.length!==1" type="button"
                   class="button-clear"
-                  (click)="forceYZero=!forceYZero;reloadDataToGraph()">
+                  (click)="forceYZero=!forceYZero;callServiceToGetObservations()">
 
             <span>  <i class="fa {{forceYZero?'fa-circle':'fa-circle-o'}}"></i> </span> Zero Axis
           </button>
