--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -23,7 +23,7 @@
 
   <div class="card-block">
 
-    <div class="w3-center">
+    <div class="">
       <button type="button"
               class="button-clear"
               (click)="toggleColor()">
