--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="card-block">
-    <div class="w3-center">
+    <div class="">
       <button type="button"
               class="button-clear"
               (click)="toggleColor()">
